--- a/dashboard.html
+++ b/dashboard.html
@@ -38,6 +38,11 @@
                 background-color: #a4a4af;
                 border-radius: 10px;
             }
+            @media only screen and (max-width: 768px) {
+                .navbar-brand {
+                    display: none;
+                }
+            } 
         </style>
     </head>
     <body class="container-fluid">
@@ -45,11 +50,30 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="./img/pshs.png" alt="PSHS-CLC" width="340" height="65">
+                        <img src="./img/pshs.png" alt="PSHS-CLC" width="270" height="50">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+                    <div class="navbar-nav order-lg-2">
+                        <div class="row">
+                            <div class="col">
+                                <a href="#" class="nav-link">
+                                    <img src="./img/notifications.svg" alt="" width="40" height="40">
+                                </a>
+                            </div>
+                            <div class="col">
+                                <a href="#" class="nav-link">
+                                    <img src="./img/chat.svg" alt="" width="40" height="40">
+                                </a>
+                            </div>
+                            <div class="col">
+                                <a href="#" class="nav-link">
+                                    <img src="./img/account.svg" alt="" width="40" height="40">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a class="nav-link" href="#">Home</a>
@@ -58,28 +82,22 @@
                             <a class="nav-link" href="#">Authors</a>
                         </div>
                     </div>
-                    <div class="navbar-nav">
-                        <a href="#" class="nav-link">
-                            <img src="./img/notifications.svg" alt="" width="40" height="40">
-                        </a>
-                        <a href="#" class="nav-link">
-                            <img src="./img/chat.svg" alt="" width="40" height="40">
-                        </a>
-                        <a href="#" class="nav-link">
-                            <img src="./img/account.svg" alt="" width="40" height="40">
-                        </a>
-                    </div>
                 </div>
             </nav>
         </header>
         <article class="container-fluid">
             <h1 id="welcome">Welcome back, Student!</h1>
             <div id="main" class="container-fluid p-2">
+                <div class="">
+                    <div class="db-container m-3 p-3">
+                        <h1>Latest Announcements</h1>
+                        <p class="fs-4">(No announcements have been posted yet.)</p>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="db-container m-3 p-3">
-                            <h1>Latest Announcements</h1>
-                            <p class="fs-5">ayoko n</p>
+                            <h1>Timeline</h1>
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -88,14 +106,9 @@
                             <div class="card p-0 m-5">
                                 <img src="./img/cs3.jpg" alt="" class="card-img-top">
                                 <div class="card-body">
-                                    <p class="card-text fs-1">Computer Science 3</p>
+                                    <p class="card-text fs-2">Computer Science 3</p>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="db-container m-3 p-3">
-                            <h1>Timeline</h1>
                         </div>
                     </div>
                 </div>
