--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>PSHS Knowledge Hub - CLC</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link href="./css/styles.css" rel="stylesheet">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
 
@@ -20,19 +21,13 @@
                 font-weight: 500;
             }
             /* Start for Dashboard only */
-            h1 {
-                font-weight: 600;
-            }
+            
             .card {
                 background-color: #342940 !important;
                 color: white;
             }
             #welcome {
                 color: #737373;
-            }
-            #main {
-                background-color: #d2d2db;
-                border-radius: 20px;
             }
             .db-container {
                 background-color: #a4a4af;
@@ -58,6 +53,14 @@
                     <div class="navbar-nav order-lg-2">
                         <div class="row">
                             <div class="col">
+                                <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                    <img src="./img/account.svg" alt="" width="40" height="40">
+                                </button>
+                                <div class="collapse" id="collapseExample">
+                                    <button class="btn btn-secondary" type="button" onclick="logout()">Log out</button>
+                                </div>
+                            </div>
+                            <div class="col">
                                 <a href="#" class="nav-link">
                                     <img src="./img/notifications.svg" alt="" width="40" height="40">
                                 </a>
@@ -67,18 +70,13 @@
                                     <img src="./img/chat.svg" alt="" width="40" height="40">
                                 </a>
                             </div>
-                            <div class="col">
-                                <a href="#" class="nav-link">
-                                    <img src="./img/account.svg" alt="" width="40" height="40">
-                                </a>
-                            </div>
                         </div>
                     </div>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            <a class="nav-link" href="#">My Courses</a>
-                            <a class="nav-link" href="#">Authors</a>
+                            <a class="nav-link active" aria-current="page" href="./">Home</a>
+                            <a class="nav-link" href="./courses.html">My Courses</a>
+                            <a class="nav-link" href="./authors.html">Authors</a>
                         </div>
                     </div>
                 </div>
@@ -86,8 +84,8 @@
         </header>
         <article class="container-fluid">
             <h1 id="welcome">Welcome back, Student!</h1>
-            <div id="main" class="container-fluid p-2">
-                <div class="">
+            <main class="container-fluid p-2">
+                <div c  lass="">
                     <div class="db-container m-3 p-3">
                         <h1>Latest Announcements</h1>
                         <p class="fs-4">(No announcements have been posted yet.)</p>
@@ -111,9 +109,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </main>
         </article>
-        <script src="./loginvalid.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script src="./login.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
     </body>
 </html>
