Changed cookie handling scripts, added CS course page (still placeholders)

--- a/courses.html
+++ b/courses.html
@@ -26,12 +26,9 @@
                     <div class="navbar-nav order-lg-2">
                         <div class="row">
                             <div class="col">
-                                <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                                    <img src="./img/account.svg" alt="" width="40" height="40">
+                                <button class="btn" type="button" onclick="logout()">
+                                    <img src="/img/logout.svg" alt="" width="40" height="40">
                                 </button>
-                                <div class="collapse" id="collapseExample">
-                                    <button class="btn btn-secondary" type="button" onclick="logout()">Log out</button>
-                                </div>
                             </div>
                             <div class="col">
                                 <a href="#" class="nav-link">
@@ -96,22 +93,24 @@
                         </div>
                     </div>
                     <div class="col-sm-6 p-2">
-                        <div class="card p-0 m-3">
-                            <h1 class="card-header">Computer Science 3</h1>
-                            <div class="card-body">
-                                <div class="d-flex">
-                                    <img src="./img/teachers/cs.jpg" alt="" class="rounded-circle mx-1" width="50" height="50">
-                                    <div class="flex-column">
-                                        <h4 class="card-subtitle mb-1">Jan Michael Ibañez</h4>
-                                        <h5 class="card-subtitle mb-2 text-muted">Teacher</h5>  
+                        <a href="/courses/cs/">
+                            <div class="card p-0 m-3">
+                                <h1 class="card-header">Computer Science 3</h1>
+                                <div class="card-body">
+                                    <div class="d-flex">
+                                        <img src="./img/teachers/cs.jpg" alt="" class="rounded-circle mx-1" width="50" height="50">
+                                        <div class="flex-column">
+                                            <h4 class="card-subtitle mb-1">Jan Michael Ibañez</h4>
+                                            <h5 class="card-subtitle mb-2 text-muted">Teacher</h5>  
+                                        </div>
                                     </div>
+                                    <h6 class="card-subtitle mb-2">Client-Side Web Development</h6>  
+                                    <p class="card-text">
+                                        Client-Side Web Development is designed to employ output-based learning and focuses on client-side web development using HTML, CSS and JavaScript.  The client-side programming explore the students in writing code that will run on the client, and is done in languages that can be executed by the browser, such as JavaScript as it motivates the students to collaborate and participate in various social issues, and learn the value of teamwork to accomplish various projects.
+                                    </p>
                                 </div>
-                                <h6 class="card-subtitle mb-2">Client-Side Web Development</h6>  
-                                <p class="card-text">
-                                    Client-Side Web Development is designed to employ output-based learning and focuses on client-side web development using HTML, CSS and JavaScript.  The client-side programming explore the students in writing code that will run on the client, and is done in languages that can be executed by the browser, such as JavaScript as it motivates the students to collaborate and participate in various social issues, and learn the value of teamwork to accomplish various projects.
-                                </p>
-                              </div>
-                        </div>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 p-2">
                         <div class="card p-0 m-3">
