--- a/courses/cs/index.html
+++ b/courses/cs/index.html
@@ -6,42 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>PSHS Knowledge Hub - CLC</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link href="./css/styles.css" rel="stylesheet">
+        <link href="/css/styles.css" rel="stylesheet">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
 
-            body {
-                background-color: #f2efeb;
-                padding: 0 !important;
-                font-family: 'Montserrat', sans-serif;
-            }
-            nav {
-                background-color: #d2d2db ;
-                font-size: 20px;
-                font-weight: 500;
-            }
-            /* Start for Dashboard only */
-            
-            .card {
-                background-color: #342940 !important;
-                color: white;
-            }
-            #welcome {
-                color: #737373;
-            }
-            @media only screen and (max-width: 768px) {
-                .navbar-brand {
-                    display: none;
-                }
-            } 
         </style>
     </head>
     <body class="container-fluid">
         <header>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="./">
-                        <img src="./img/pshs.png" alt="PSHS-CLC" width="270" height="50">
+                    <a class="navbar-brand" href="/">
+                        <img src="/img/pshs.png" alt="PSHS-CLC" width="270" height="50">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -55,28 +30,29 @@
                             </div>
                             <div class="col">
                                 <a href="#" class="nav-link">
-                                    <img src="./img/notifications.svg" alt="" width="40" height="40">
+                                    <img src="/img/notifications.svg" alt="" width="40" height="40">
                                 </a>
                             </div>
                             <div class="col">
                                 <a href="#" class="nav-link">
-                                    <img src="./img/chat.svg" alt="" width="40" height="40">
+                                    <img src="/img/chat.svg" alt="" width="40" height="40">
                                 </a>
                             </div>
                         </div>
                     </div>
+                    
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" href="./">Home</a>
-                            <a class="nav-link" href="./courses.html">My Courses</a>
-                            <a class="nav-link" href="./authors.html">Authors</a>
+                            <a class="nav-link" href="/">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/courses.html">My Courses</a>
+                            <a class="nav-link" href="/authors.html">Authors</a>
                         </div>
                     </div>
                 </div>
             </nav>
         </header>
         <article class="container-fluid">
-            <h1 id="welcome">Welcome back, Student!</h1>
+            <h1>Computer Science 3</h1>
             <main class="container-fluid p-2">
                 <div class="">
                     <div class="db-container m-3 p-3">
@@ -106,7 +82,7 @@
                 </div>
             </main>
         </article>
-        <script src="./login.js"></script>
+        <script src="/login.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
     </body>
 </html>
