me when 20 things break

--- a/courses/cs/index.html
+++ b/courses/cs/index.html
@@ -25,17 +25,17 @@
                         <div class="row">
                             <div class="col">
                                 <button class="btn" type="button" onclick="logout()">
-                                    <img src="/img/logout.svg" alt="" width="40" height="40">
+                                    <img src="../..//img/logout.svg" alt="" width="40" height="40">
                                 </button>
                             </div>
                             <div class="col">
                                 <a href="#" class="nav-link">
-                                    <img src="/img/notifications.svg" alt="" width="40" height="40">
+                                    <img src="../../img/notifications.svg" alt="" width="40" height="40">
                                 </a>
                             </div>
                             <div class="col">
                                 <a href="#" class="nav-link">
-                                    <img src="/img/chat.svg" alt="" width="40" height="40">
+                                    <img src="../../img/chat.svg" alt="" width="40" height="40">
                                 </a>
                             </div>
                         </div>
@@ -43,9 +43,9 @@
                     
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link" href="/">Home</a>
-                            <a class="nav-link active" aria-current="page" href="/courses.html">My Courses</a>
-                            <a class="nav-link" href="/authors.html">Authors</a>
+                            <a class="nav-link" href="../../">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../../courses.html">My Courses</a>
+                            <a class="nav-link" href="../../authors.html">Authors</a>
                         </div>
                     </div>
                 </div>
