--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <h1>Recently Accessed</h1>
                             <div class="card p-0 m-5">
                                     <a href="/courses/cs/">
-                                    <img src="/img/cs3.jpg" alt="" class="card-img-top">
+                                    <img src="./img/cs3.jpg" alt="" class="card-img-top">
                                     <div class="card-body">
                                         <p class="card-text fs-2">Computer Science 3</p>
                                     </div>
