--- a/courses.html
+++ b/courses.html
@@ -27,7 +27,7 @@
                         <div class="row">
                             <div class="col">
                                 <button class="btn" type="button" onclick="logout()">
-                                    <img src="/img/logout.svg" alt="" width="40" height="40">
+                                    <img src="./img/logout.svg" alt="" width="40" height="40">
                                 </button>
                             </div>
                             <div class="col">
