--- a/courses/cs/index.html
+++ b/courses/cs/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>PSHS Knowledge Hub - CLC</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link href="/css/styles.css" rel="stylesheet">
+        <link href="../../css/styles.css" rel="stylesheet">
         <style>
 
         </style>
@@ -15,8 +15,8 @@
         <header>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/">
-                        <img src="/img/pshs.png" alt="PSHS-CLC" width="270" height="50">
+                    <a class="navbar-brand" href="../../">
+                        <img src="../../img/pshs.png" alt="PSHS-CLC" width="270" height="50">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                         <div class="row">
                             <div class="col">
                                 <button class="btn" type="button" onclick="logout()">
-                                    <img src="../..//img/logout.svg" alt="" width="40" height="40">
+                                    <img src="../../img/logout.svg" alt="" width="40" height="40">
                                 </button>
                             </div>
                             <div class="col">
