--- a/courses/cs/quiz.html
+++ b/courses/cs/quiz.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>PSHS Knowledge Hub - CLC</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link href="/css/styles.css" rel="stylesheet">
+        <link href="../../css/styles.css" rel="stylesheet">
         <style>
 
         </style>
@@ -15,8 +15,8 @@
         <header>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/">
-                        <img src="/img/pshs.png" alt="PSHS-CLC" width="270" height="50">
+                    <a class="navbar-brand" href="../../">
+                        <img src="../../img/pshs.png" alt="PSHS-CLC" width="270" height="50">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -25,26 +25,27 @@
                         <div class="row">
                             <div class="col">
                                 <button class="btn" type="button" onclick="logout()">
-                                    <img src="/img/logout.svg" alt="" width="40" height="40">
+                                    <img src="../../img/logout.svg" alt="" width="40" height="40">
                                 </button>
                             </div>
                             <div class="col">
                                 <a href="#" class="nav-link">
-                                    <img src="/img/notifications.svg" alt="" width="40" height="40">
+                                    <img src="../../img/notifications.svg" alt="" width="40" height="40">
                                 </a>
                             </div>
                             <div class="col">
                                 <a href="#" class="nav-link">
-                                    <img src="/img/chat.svg" alt="" width="40" height="40">
+                                    <img src="../../img/chat.svg" alt="" width="40" height="40">
                                 </a>
                             </div>
                         </div>
                     </div>
+                    
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                            <a class="nav-link" href="/courses.html">My Courses</a>
-                            <a class="nav-link" href="/authors.html">Authors</a>
+                            <a class="nav-link" href="../../">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../../courses.html">My Courses</a>
+                            <a class="nav-link" href="../../authors.html">Authors</a>
                         </div>
                     </div>
                 </div>
