Fix author pictures, edit README

--- a/authors.html
+++ b/authors.html
@@ -56,17 +56,17 @@
                     <h5>Group 1: 9 - Samat</h5>
                     <div class="row justify-content-evenly">
                         <div class="col-sm-4">
-                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <img src="./img/authors/julian.jpg" alt="" width="300" class="img-fluid">
                             <p class="fs-4 m-0">Julian Nite M. Yu</p>
                             <p>Group Member</p>
                         </div>
                         <div class="col-sm-4">
-                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <img src="./img/authors/julia.jpg" alt="" width="300" class="img-fluid">
                             <p class="fs-4 m-0">Julia Arista B. Mustard</p>
                             <p>Group Member</p>
                         </div>
                         <div class="col-sm-4">
-                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <img src="./img/authors/jash.jpg" alt="" width="300" class="img-fluid">
                             <p class="fs-4 m-0">Jashley Angel A. Serdoncillo</p>
                             <p>Group Member</p>
                         </div>
@@ -76,7 +76,7 @@
                             <p>Group Member</p>
                         </div>
                         <div class="col-sm-4">
-                            <img src="./img/authors/alvin.jpg" alt="" width="300" class="img-fluid">
+                            <img src="./img/authors/jo.jpg" alt="" width="300" class="img-fluid">
                             <p class="fs-4 m-0">Johanna Patrice F. Loresca  </p>
                             <p>Group Member</p>
                         </div>
